--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   date_time_picker: ^2.1.0
   dio: ^4.0.6
+  expandable_text: ^2.3.0
   flutter:
     sdk: flutter
+  flutter_chip_tags: ^2.0.2
   flutter_form_builder: ^7.7.0
   flutter_stripe: ^7.0.0
   gap: ^2.0.1
