--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     sdk: flutter
   flutter_chip_tags: ^2.0.2
   flutter_form_builder: ^7.7.0
+  flutter_screenutil: ^5.6.1
   flutter_stripe: ^7.0.0
   gap: ^2.0.1
   get: ^4.6.5
@@ -49,6 +50,7 @@ dependencies:
   multi_select_flutter: ^4.1.2
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
+  socket_io_client: ^2.0.1
   textfield_tags: ^2.0.2
 
 dev_dependencies:
