--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   http: ^0.13.5
   image_picker: ^0.8.6
   intl: ^0.17.0
+  livekit_client: ^1.2.0
   mime_type: ^1.0.0
   mongo_dart: ^0.8.0
   multi_select_flutter: ^4.1.2
