--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,17 @@ dependencies:
   cupertino_icons: ^1.0.2
   date_time_picker: ^2.1.0
   dio: ^4.0.6
+  eva_icons_flutter: ^3.1.0
   expandable_text: ^2.3.0
   flutter:
     sdk: flutter
+  flutter_background: ^1.2.0
+  flutter_background_service: ^2.4.6
   flutter_chip_tags: ^2.0.2
   flutter_form_builder: ^7.7.0
   flutter_screenutil: ^5.6.1
   flutter_stripe: ^7.0.0
+  flutter_svg: ^2.0.2
   gap: ^2.0.1
   get: ^4.6.5
   google_fonts: ^4.0.3
@@ -46,6 +50,7 @@ dependencies:
   image_picker: ^0.8.6
   intl: ^0.17.0
   livekit_client: ^1.2.0
+  logging: ^1.1.1
   mime_type: ^1.0.0
   mongo_dart: ^0.8.0
   multi_select_flutter: ^4.1.2
