--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   socket_io_client: ^2.0.1
   textfield_tags: ^2.0.2
   url_launcher: ^6.1.10
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_lints: ^2.0.0
