--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   auto_size_text: ^3.0.0
+  carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
   date_time_picker: ^2.1.0
   dio: ^4.0.6
+  dots_indicator: ^2.1.0
   eva_icons_flutter: ^3.1.0
   expandable_text: ^2.3.0
   file_picker: ^5.2.5
