--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   multi_select_flutter: ^4.1.2
   open_filex: ^4.3.2
   persistent_bottom_nav_bar: ^5.0.2
+  provider: ^6.0.5
   searchfield: ^0.7.5
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
