--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_chat_ui: ^1.6.6
   flutter_chip_tags: ^2.0.2
   flutter_form_builder: ^7.7.0
+  flutter_local_notifications: ^13.0.0
   flutter_rating_bar: ^4.0.1
   flutter_screenutil: ^5.6.1
   flutter_stripe: ^7.0.0
