webinar history and analytics done email and social media marketing completed fully

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   eva_icons_flutter: ^3.1.0
   expandable_text: ^2.3.0
   file_picker: ^5.2.5
+  fl_chart: ^0.61.0
   floating_action_bubble: ^1.1.4
   flutter:
     sdk: flutter
@@ -69,6 +70,7 @@ dependencies:
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
   socket_io_client: ^2.0.1
+  syncfusion_flutter_charts: ^20.4.54
   textfield_tags: ^2.0.2
   url_launcher: ^6.1.10
   uuid: ^3.0.7
