--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,12 +45,15 @@ dependencies:
   flutter_background_service: ^2.4.6
   flutter_chat_ui: ^1.6.6
   flutter_chip_tags: ^2.0.2
+  flutter_colorpicker: ^1.0.3
   flutter_form_builder: ^7.7.0
   flutter_local_notifications: ^13.0.0
   flutter_rating_bar: ^4.0.1
   flutter_screenutil: ^5.6.1
   flutter_stripe: ^7.0.0
   flutter_svg: ^2.0.2
+  flutter_typeahead: ^4.3.7
+  gallery_saver: ^2.3.2
   gap: ^2.0.1
   get: ^4.6.5
   google_fonts: ^4.0.3
@@ -64,8 +67,10 @@ dependencies:
   mongo_dart: ^0.8.0
   multi_select_flutter: ^4.1.2
   open_filex: ^4.3.2
+  path_provider: ^2.0.14
   persistent_bottom_nav_bar: ^5.0.2
   provider: ^6.0.5
+  screenshot: ^1.3.0
   searchfield: ^0.7.5
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
