--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,8 @@ dependencies:
   flutter_chip_tags: ^2.0.2
   flutter_colorpicker: ^1.0.3
   flutter_form_builder: ^7.7.0
-  flutter_local_notifications: ^13.0.0
+  flutter_local_notifications: ^14.0.0+2
+  flutter_phoenix: ^1.1.0
   flutter_rating_bar: ^4.0.1
   flutter_screenutil: ^5.6.1
   flutter_stripe: ^7.0.0
@@ -70,6 +71,7 @@ dependencies:
   path_provider: ^2.0.14
   persistent_bottom_nav_bar: ^5.0.2
   provider: ^6.0.5
+  restart_app: ^1.1.2
   screenshot: ^1.3.0
   searchfield: ^0.7.5
   shared_preferences: ^2.0.15
